# gl-shader-loader

./: Readme.md  meson.build
include/: Loader.h
src/: Loader.cpp
